--- a/AutoBaloo/Views/Vehicule/Index.cshtml
+++ b/AutoBaloo/Views/Vehicule/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Vehicule>
 
 @{
-    ViewData["Title"] = "Liste des véhicules";
+    ViewData["Title"] = "Liste des acteurs";
 }
 
 <div class="row">
@@ -10,38 +10,65 @@
         <table class="table">
             <thead>
                 <tr class="text-center">
-                    <th>@Html.DisplayNameFor(model => model.ProfilePictureURL)</th>
-                    <th>@Html.DisplayNameFor(model => model.FullName)</th>
-                    <th>@Html.DisplayNameFor(model => model.Bio)</th>
-                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                    {
-                        <th>Actions</th>
-                    }
+                    <th>@Html.DisplayNameFor(model => model.MarqueVehicule)</th>
+                    <th>@Html.DisplayNameFor(model => model.StatutVehicule)</th>
+                    <th>@Html.DisplayNameFor(model => model.TypeCarbu)</th>
+                    <th>@Html.DisplayNameFor(model => model.PrixVehicule)</th>
+                    <th>@Html.DisplayNameFor(model => model.DescriptionVehicule)</th>
+                    <th>@Html.DisplayNameFor(model => model.DateConstruct)</th>
+                    <th>@Html.DisplayNameFor(model => model.KM)</th>
+                    <th>@Html.DisplayNameFor(model => model.OptionVehicule)</th>
+                    <th>@Html.DisplayNameFor(model => model.CouleurVehicule)</th>
+                    <th>@Html.DisplayNameFor(model => model.ImageURL)</th>
+
+                    { <th>Actions</th>}
+
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
+                <tr>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.MarqueVehicule)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.StatutVehicule)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.TypeCarbu)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.PrixVehicule)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.DescriptionVehicule)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.DateConstruct)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.KM)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.OptionVehicule)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.CouleurVehicule )
+                    </td>
+                    <td class="align-middle">
+                        <img class="img-thumbnail" src="images/vehicules/1.jpg" alt="@item.ImageURL"  />
+                    </td>
+                    
+                    {
                         <td class="align-middle">
-                            <img class="rounded-circle" src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width: 150px" />
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit </a> |
+                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>Details </a> |
+                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete </a>
                         </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.FullName)
-                        </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Bio)
-                        </td>
-                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                        {
-                            <td class="align-middle">
-                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit </a> |
-                                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>Details </a> |
-                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete </a>
-                            </td>
-                        }
+                    }
 
-                    </tr>
+                </tr>
                 }
             </tbody>
 
@@ -49,5 +76,3 @@
 
     </div>
 </div>
-
-@await Html.PartialAsync("_CreateItem", "Actors") 
