--- a/AutoBaloo/Views/Vehicule/Index.cshtml
+++ b/AutoBaloo/Views/Vehicule/Index.cshtml
@@ -1,53 +1,67 @@
 ﻿@model IEnumerable<Vehicule>
 
 @{
-    ViewData["Title"] = "Liste des véhicules";
+    ViewData["Title"] = "Liste des vehicules ";
 }
 
-<div class="row">
-    <div class="col-md-8 offset-md-2">
-
-        <table class="table">
-            <thead>
-                <tr class="text-center">
-                    <th>@Html.DisplayNameFor(model => model.ProfilePictureURL)</th>
-                    <th>@Html.DisplayNameFor(model => model.FullName)</th>
-                    <th>@Html.DisplayNameFor(model => model.Bio)</th>
-                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                    {
-                        <th>Actions</th>
-                    }
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td class="align-middle">
-                            <img class="rounded-circle" src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width: 150px" />
-                        </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.FullName)
-                        </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Bio)
-                        </td>
-                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                        {
-                            <td class="align-middle">
-                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit </a> |
-                                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>Details </a> |
-                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete </a>
-                            </td>
-                        }
-
-                    </tr>
-                }
-            </tbody>
-
-        </table>
-
-    </div>
+<div style="  right:50px; top:50px" class="text-white">
+   
+    <a asp-controller="Vehicule" asp-action="Create" class="btn btn-success">
+    <i class="bi bi-plus-circle"></i> Ajouter Voiture</a>
 </div>
 
-@await Html.PartialAsync("_CreateItem", "Actors") 
+
+<div class="row">
+    @foreach (var item in Model)
+    {
+        var photoPath = "~/images/" + (item.ImageURL ?? "12.jpg.jpg" );
+
+        <div class="col-md-4 col-xs-6 border-primary mb-10 ">
+            <div class="card mb-3" style=" max-width: 450px; ">
+                <div class="row g-0">
+                    <div class="col-md-12">
+                        <div class="card-header text-white bg-info"  style="height:75px">
+                            <p class="card-text">
+                                <h6 class="card-title ">
+                                    <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
+                                    @item.MarqueVehicule <br />
+                                    @item.PrixVehicule.ToString("c")
+
+                                </h6>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6  ">
+                        <img src="@photoPath" asp-append-version="true"  width="100%" height="50%" alt="@item.MarqueVehicule">
+                    </div>
+                    <div class="col-md-6 ">
+                        <div class="card-body">
+                            <p class="card-text " style="height:100px;">@item.DescriptionVehicule</p>
+                            <p class="card-text"><b>kilometrage: </b>@item.KM</p>
+                            <p class="card-text "><b>Date construction: </b>@item.DateConstruct</p>
+                            <p class="card-text "> <b>Status: </b>@item.StatutVehicule</p>
+
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="card-footer ">
+                            <div class="card-text">
+
+                                <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
+                                    <i class="bi bi-eye-fill"></i> afficher les détails
+                                </a>
+                                <a class="btn btn-success text-white"
+                                   asp-controller="Orders"
+                                   asp-action="AddItemToShoppingCart"
+                                   asp-route-id="@item.Id">
+                                    <i class="bi bi-calendar-check"></i> Réserver
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
+</div>
