Crud-module-vehicule

--- a/AutoBaloo/Views/Vehicule/Details.cshtml
+++ b/AutoBaloo/Views/Vehicule/Details.cshtml
@@ -2,7 +2,7 @@
 @using AutoBaloo.Data.Enums;
 @{
     ViewBag.Title = "Détails des véhicule";
-    var photoPath = "~/images/" + (Model.ImageURL ?? "noimage.jpg");
+    var photoPath = "~/images/" + (Model.ImageURL ?? "1.jpg");
 }
 
 <div class="row text">
