--- a/AutoBaloo/Views/Vehicule/Create.cshtml
+++ b/AutoBaloo/Views/Vehicule/Create.cshtml
@@ -1,84 +1,10 @@
-﻿<!--
-@using AutoBaloo.Data.Enums;
-
-
-
-<div class="row text">
-    <div class="col-md-8 offset-2">
-        <p style="text-align:center">
-            <h1>Ajouter une nouvelle voiture</h1>
-        </p>
-        <div class="row">
-            <div class="col-md-8 offset-2">
-                <form asp-action="Create">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                    <div class="form-group text-center">
-                        <img id="ProfilePicturePreview" class="border-info rounded-circle" style="max-width: 150px" />
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ImageURL" class="control-label"></label>
-                        <input asp-for="ImageURL" class="form-control" />
-                        <span asp-validation-for="ImageURL" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="MarqueVehicule" class="control-label"></label>
-                        <select asp-for="MarqueVehicule" class="form-control" asp-items="Html.GetEnumSelectList<MarqueVehicule>()"></select>
-                        <span asp-validation-for="MarqueVehicule" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="DescriptionVehicule" class="control-label"></label>
-                        <input asp-for="DescriptionVehicule" class="form-control" />
-                        <span asp-validation-for="DescriptionVehicule" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="KM" class="control-label"></label>
-                        <input asp-for="KM" class="form-control" />
-                        <span asp-validation-for="KM" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="CouleurVehicule" class="control-label"></label>
-                        <input asp-for="CouleurVehicule" class="form-control" />
-                        <span asp-validation-for="CouleurVehicule" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="DateConstruct" class="control-label"></label>
-                        <input asp-for="DateConstruct" class="form-control" />
-                        <span asp-validation-for="DateConstruct" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <label asp-for="PrixVehicule" class="control-label"></label>
-                        <input asp-for="PrixVehicule" class="form-control" />
-                        <span asp-validation-for="PrixVehicule" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <label asp-for="StatutVehicule" class="control-label"></label>
-                        <select asp-for="StatutVehicule" class="form-control" asp-items="Html.GetEnumSelectList<StatutVehicule>()"></select>
-                        <span asp-validation-for="StatutVehicule" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="OptionVehicule" class="control-label"></label>
-                        <input asp-for="OptionVehicule" class="form-control" />
-                        <span asp-validation-for="OptionVehicule" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-outline-success float-right" />
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
--->
-
+﻿
 @model VehiculeCreateViewModel
+@using AutoBaloo.Data.Enums;
 
 @{ ViewData["Title"] = "Ajouter une voiture"; }
 
-@*To support file upload set the form element enctype="multipart/form-data" *@
+@*Pour prendre en charge le téléchargement de fichiers, définissez l'élément de formulaire enctype="multipart/form-data" *@
 
 <form enctype="multipart/form-data" asp-controller="Vehicule" asp-action="create"
       method="post" class="mt-3">
@@ -157,8 +83,8 @@
         </div>
     </div>
 
-    @*  asp-for tag helper is set to "Photo" property. "Photo" property type is IFormFile
-        so at runtime asp.net core generates file upload control (input type=file)
+    @*  asp-for tag helper est défini sur la propriété "Image". Le type de propriété "Image" est IFormFile, donc au moment
+        de l'exécution, le noyau asp.net génère un contrôle de téléchargement de fichier (type d'entrée = fichier)
     *@
 
     <div class="form-group row">
@@ -179,7 +105,7 @@
         </div>
     </div>
 
-    @*This script is required to display the selected file in the file upload element*@
+    @*Ce script est requis pour afficher le fichier sélectionné dans l'élément de téléchargement de fichier*@
     @section Scripts {
         <script>
             $(document).ready(function () {
