--- a/AutoBaloo/Views/Reservation/Index.cshtml
+++ b/AutoBaloo/Views/Reservation/Index.cshtml
@@ -27,31 +27,38 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                <tr>
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.DateDebut)
-                    </td>
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.DateFin)
-                    </td>
+                    <tr>
+                        <td class="align-middle">
+                            @Html.DisplayFor(modelItem => item.DateDebut)
+                        </td>
+                        <td class="align-middle">
+                            @Html.DisplayFor(modelItem => item.DateFin)
+                        </td>
 
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.Duree)
-                    </td>
-                    <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.TypeReservation)
-                    </td>
+                        <td class="align-middle">
+                            @Html.DisplayFor(modelItem => item.Duree)
+                        </td>
+                        <td class="align-middle">
+                            @Html.DisplayFor(modelItem => item.TypeReservation)
+                        </td>
 
-                    <td class="align-middle ">
-                        <a class="btn btn-outline-primary  " asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square">  </i>  Modifier </a> 
-                        <a class="btn btn-outline-info  " asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>  Détail </a>
-                        <a class="btn btn-danger text-white  " asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i> Supprimer</a>
-                    </td>
+                        <td class="align-middle ">
+                            <a class="btn btn-outline-primary  " asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square">  </i>  Modifier </a>
+                            <a class="btn btn-outline-info  " asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>  Détail </a>
+                            <a class="btn btn-danger text-white  " asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i> Supprimer</a>
+                        </td>
 
 
-                </tr>
+                    </tr>
                 }
+
             </tbody>
+            <div style="  right:50px; top:50px" class="text-white">
+
+                <a asp-controller="Reservation" asp-action="Create" class="btn btn-success">
+                    <i class="bi bi-plus-circle"></i> Ajouter Voiture
+                </a>
+            </div>
 
         </table>
 
