--- a/AutoBaloo/Views/Stock/Index.cshtml
+++ b/AutoBaloo/Views/Stock/Index.cshtml
@@ -2,18 +2,32 @@
 @model IEnumerable<Stock>
 
 @{
-    ViewData["Title"] = "Liste des stock ";
+    ViewData["Title"] = "Liste des stocks ";
 }
 
+
+
+
 <div class="row">
+
+
     <div class="col-md-8 offset-md-2">
 
+        <div class="text-white">
+
+            <a class="btn btn-outline-info  " asp-controller="Stock" asp-action="Create">
+
+                <i class="bi bi-patch-plus"></i>  ajouter Stock
+            </a>
+
+        </div>
         <table class="table">
             <thead>
                 <tr class="text-center">
+                    <th>@Html.DisplayNameFor(model => model.Vehicule.MarqueVehicule)</th>
                     <th>@Html.DisplayNameFor(model => model.DateStock)</th>
                     <th>@Html.DisplayNameFor(model => model.QteStock)</th>
-                    
+
 
                     <th>Actions</th>
 
@@ -24,19 +38,31 @@
                 {
                     <tr>
                         <td class="align-middle">
+                            @Html.DisplayFor(modelItem => item.Vehicule.MarqueVehicule)
+                        </td>
+
+                        <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.DateStock)
                         </td>
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.QteStock)
                         </td>
-                        
 
 
 
-                        <td class="align-middle  ">
-                            <a class="btn btn-outline-info  " asp-action="Details" asp-route-id="@item.Id">       <i class="bi bi-patch-plus"></i>  ajouter  </a>|
-                            <a class="btn btn-outline-primary  " asp-action="Edit" asp-route-id="@item.Id" >        <i class="bi bi-pencil-square">  </i>  Modifier</a> |
-                            <a class="btn btn-danger text-white  " asp-action="Delete" asp-route-id="@item.Id">      <i class="bi bi-trash"></i>  Supprimer  </a>
+
+
+
+
+                        <td class="align-middle">
+
+                            <a class="btn btn-outline-primary  " asp-action="Edit" asp-route-id="@item.Id">        <i class="bi bi-pencil-square">  </i>  Modifier</a> |
+
+
+                            @Html.ActionLink("Supprimer", "delete", new { id = @item.Id }, new { @class = "btn btn-danger", id = "btnalertmessage" })
+
+
+
                         </td>
 
 
@@ -48,3 +74,22 @@
 
     </div>
 </div>
+@*Ce script est requis pour afficher le fichier sélectionné dans l'élément de téléchargement de fichier*@
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $("#btnalertmessage").click(function () {
+                //alert("Are you sure ?");
+                //swal({
+                //    title: "Are you sure?",
+                //    text: "Once deleted, you will not be able to recover this imaginary file!",
+                //    icon: "warning",
+                //    buttons: true,
+                //    dangerMode: true,
+                //})
+
+                    
+            });
+        });
+    </script>
+}
