--- a/AutoBaloo/Views/Vehicule/Index.cshtml
+++ b/AutoBaloo/Views/Vehicule/Index.cshtml
@@ -23,7 +23,9 @@
                         <div class="card-header text-white bg-info"  style="height:75px">
                             <p class="card-text">
                                 <h6 class="card-title ">
+                                    <a  class="text-white float-right" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-x-square"></i></a>
                                     <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
+
                                     @item.MarqueVehicule <br />
                                     @item.PrixVehicule.ToString("c")
 
