--- a/AutoBaloo/Views/Vehicule/Details.cshtml
+++ b/AutoBaloo/Views/Vehicule/Details.cshtml
@@ -5,118 +5,70 @@
     var photoPath = "~/images/" + (Model.ImageURL ?? "1.jpg");
 }
 
-<div class="row text">
-    <div class="col-md-8 offset-2" style="text-align:center;">
-        <p >
-            <h1>Details for @Model.MarqueVehicule</h1>
-        </p>
-        <div class="row">
-            <div class="col-md-8 offset-2">
-                
-                <div class="card-body text-center">
-                <img class="border-info rounded-pill" style="max-width:450px" src="@photoPath" asp-append-version="true" />
-                </div>
-
-
-                <div class="form-group row">
-                    
-                    <div class="col-sm-10">
-                        <input asp-for="MarqueVehicule" class="form-control" readonly />
-                        <span asp-validation-for="MarqueVehicule" class="text-danger"></span>
+<div class="row">
+    <div class="col-md-8 offset-2">
+        <div class="card mb-12">
+            <div class="row g-0">
+                <div class="col-md-12">
+                    <div class="card-header text-white bg-info">
+                        <p class="card-text">
+                            <h5 class="card-title">
+                                @Model.MarqueVehicule
+                            </h5>
+                        </p>
                     </div>
                 </div>
-
-                    <div class="form-group row">
-                        
-                        <div class="col-sm-10">
-                            <input asp-for="DescriptionVehicule" class="form-control" readonly>
-                            <span asp-validation-for="DescriptionVehicule" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-                    <div class="form-group row">
-                       
-                        <div class="col-sm-10">
-                            <input asp-for="KM" class="form-control" readonly>
-                            <span asp-validation-for="KM" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-                    <div class="form-group row">
-                       
-                        <div class="col-sm-10">
-                            <input asp-for="CouleurVehicule" class="form-control" readonly>
-                            <span asp-validation-for="CouleurVehicule" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-                    <div class="form-group row">
-                        
-                        <div class="col-sm-10">
-                            <input asp-for="PrixVehicule" class="form-control" readonly>
-                            <span asp-validation-for="PrixVehicule" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-                    <div class="form-group row">
-                        
-                        <div class="col-sm-10">
-                            <input asp-for="TypeCarbu" class="form-control" readonly>
-                            <span asp-validation-for="TypeCarbu" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-
-                    <div class="form-group row">
-                        
-                        <div class="col-sm-10">
-                            <input asp-for="DateConstruct" class="form-control" readonly>
-                            <span asp-validation-for="DateConstruct" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-
-                    <div class="form-group row">
-                       
-                        <div class="col-sm-10">
-                            <select asp-for="StatutVehicule" class="custom-select mr-sm-2"
-                                    asp-items="Html.GetEnumSelectList<StatutVehicule>()">
-                                <option value="">Please Select</option>
-                            </select>
-                            <span asp-validation-for="StatutVehicule" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-
-
-                    <div class="form-group row">
-                       
-                        <div class="col-sm-10">
-                            <input asp-for="OptionVehicule" class="form-control" readonly>
-                            <span asp-validation-for="OptionVehicule" class="text-danger"></span>
-                        </div>
-                    </div>
-
-
-
-                    <div class="form-group">
-
-                        <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
-                    </div>
-
-
-
+                <div class="col-md-4  ">
+                    <img src="@photoPath" asp-append-version="true" width="100%" height="50%" alt="@Model.MarqueVehicule">
                 </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <p class="card-text"><b>Model Véhicule: </b>@Model.DescriptionVehicule</p>
+                        <p class="card-text"><b>Kilométrage: </b> @Model.KM</p>
+                        <p class="card-text"><b>Couleur: </b>@Model.CouleurVehicule</p>
+                        <p class="card-text"><b>Type carburant: </b>@Model.TypeCarbu</p>
+                        <p class="card-text"><b>Date construction: </b>@Model.DateConstruct</p>
+                        <p class="card-text"><b>Prix du Voiture </b>@Model.PrixVehicule</p>
+                         <p class="card-text">
+                            @if (Model.OptionVehicule != "null")
+                            {
+                            <span class="badge bg-success text-white">@Model.OptionVehicule</span>
+                            }
+                          </p>
+                        <p class="card-text ">
+                            <b>Status: </b>
+                            @if (Model.StatutVehicule == StatutVehicule.Disponible)
+                            {
+                                <span class="badge bg-success text-white">@Model.StatutVehicule</span>
+                            }
+                            else if (Model.StatutVehicule == StatutVehicule.Vendu)
+                            {
+                                <span class="badge bg-danger text-white">@Model.StatutVehicule</span>
+                            }
+                            else
+                            {
+                                <span class="badge bg-primary text-white"> @Model.StatutVehicule</span>
+                            }
+                        </p>
+
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="card-footer">
+                        <p class="card-text">
+                            <a class="btn btn-outline-primary float-right" asp-action="Index">
+                                Retourner 
+                            </a>
+                            <a class="btn btn-success text-white  @((Model.StatutVehicule == StatutVehicule.Vendu && Model.StatutVehicule == StatutVehicule.Loué) ? " disabled" : "" )"
+                               asp-controller="Home"
+                               asp-action="Reservation"
+                               asp-route-id="@Model.Id">
+                                <i class="bi bi-calendar-check"></i> Réserver
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-}
