--- a/AutoBaloo/Views/Vehicule/Index.cshtml
+++ b/AutoBaloo/Views/Vehicule/Index.cshtml
@@ -1,29 +1,30 @@
 ﻿@model IEnumerable<Vehicule>
-
+@using AutoBaloo.Data.Enums;
 @{
     ViewData["Title"] = "Liste des vehicules ";
 }
 
 <div style="  right:50px; top:50px" class="text-white">
-   
+
     <a asp-controller="Vehicule" asp-action="Create" class="btn btn-success">
-    <i class="bi bi-plus-circle"></i> Ajouter Voiture</a>
+        <i class="bi bi-plus-circle"></i> Ajouter Voiture
+    </a>
 </div>
 
 
 <div class="row">
     @foreach (var item in Model)
     {
-        var photoPath = "~/images/" + (item.ImageURL ?? "1.jpg.jpg" );
+        var photoPath = "~/images/" + (item.ImageURL ?? "1.jpg.jpg");
 
         <div class="col-md-4 col-xs-6 border-primary mb-10 ">
             <div class="card mb-3" style=" max-width: 450px; ">
                 <div class="row g-0">
                     <div class="col-md-12">
-                        <div class="card-header text-white bg-info"  style="height:75px">
+                        <div class="card-header text-white bg-info" style="height:75px">
                             <p class="card-text">
                                 <h6 class="card-title ">
-                                    <a  class="text-white float-right" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-x-square"></i></a>
+                                    <a class="text-white float-right" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-x-square"></i></a>
                                     <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
 
                                     @item.MarqueVehicule <br />
@@ -34,14 +35,28 @@
                         </div>
                     </div>
                     <div class="col-md-6  ">
-                        <img src="@photoPath" asp-append-version="true"  width="100%" height="50%" alt="@item.MarqueVehicule">
+                        <img src="@photoPath" asp-append-version="true" width="100%" height="50%" alt="@item.MarqueVehicule">
                     </div>
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text " style="height:100px;">@item.DescriptionVehicule</p>
-                            <p class="card-text"><b>kilometrage: </b>@item.KM</p>
-                            <p class="card-text "><b>Date construction: </b>@item.DateConstruct</p>
-                            <p class="card-text "> <b>Status: </b>@item.StatutVehicule</p>
+                            <p class="card-text " style="height:110px;">@item.DescriptionVehicule</p>
+                            <p class="card-text"><b style="font-size:small">kilometrage: </b>@item.KM</p>
+                            <p class="card-text "><b style="font-size:small">Date construction: </b>@item.DateConstruct</p>
+                            <p class="card-text ">
+                                <b style="font-size:small">Status: </b>
+                                @if (item.StatutVehicule == StatutVehicule.Disponible)
+                                {
+                                    <span class="badge bg-success text-white">@item.StatutVehicule</span>
+                                }
+                                else if (item.StatutVehicule == StatutVehicule.Vendu)
+                                {
+                                    <span class="badge bg-danger text-white">@item.StatutVehicule</span>
+                                }
+                                else
+                                {
+                                    <span class="badge bg-primary text-white"> @item.StatutVehicule</span>
+                                }
+                            </p>
 
                         </div>
                     </div>
@@ -52,9 +67,9 @@
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
                                     <i class="bi bi-eye-fill"></i> afficher les détails
                                 </a>
-                                <a class="btn btn-success text-white"
-                                   asp-controller="Orders"
-                                   asp-action="AddItemToShoppingCart"
+                                <a class="btn btn-success text-white  @((item.StatutVehicule == StatutVehicule.Vendu && item.StatutVehicule == StatutVehicule.Loué) ? " disabled" : "" )"
+                                   asp-controller="Home"
+                                   asp-action="Reservation"
                                    asp-route-id="@item.Id">
                                     <i class="bi bi-calendar-check"></i> Réserver
                                 </a>
